--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,20 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en" class="u-maximize-height">
 <head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width'>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 
-	<title>Admin App</title>
+    <title>Admin App</title>
 
-	<link rel='icon' type='image/png' href='#'>
-	<link rel='stylesheet' href='/global.css'>
-    <link rel='stylesheet' href='/bundle.css'>
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="/global.css">
+    <link rel="stylesheet" href="/build/bundle.css">
+    <link rel="stylesheet" href="/css/main.css">
 
-	<script defer src='/bundle.js'></script>
+    <script defer src="/build/bundle.js"></script>
 </head>
 
-<body>
+<body class="u-maximize-height">
+    <!-- App rendered here -->
 </body>
 </html>
