--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 
     <title>Admin App</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet"> 
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/global.css">
     <link rel="stylesheet" href="/build/bundle.css">
